--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
   --bg-light: #f9f4fb;
   --color-light: #b52184;
   --color-dark: #312d64;
-
   font-family: "Mulish";
 }
 
@@ -14,6 +13,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -36,6 +39,32 @@ p {
   flex-direction: column;
   justify-content: center;
   padding: 0 2rem;
+}
+
+#landing > img {
+  -webkit-animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
 }
 
 #landing > div {
@@ -65,6 +94,14 @@ h1 {
   align-items: center;
 }
 
+.btn-more:hover {
+  transform: translateY(-0.3rem);
+}
+
+.btn-more:active {
+  transform: translateY(0.3rem);
+}
+
 /* details */
 
 #details {
@@ -90,7 +127,62 @@ article h3 {
 
 /* contact */
 
+#contact {
+  background-color: var(--bg-light);
+  padding: 4.5rem 2.5rem;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+#contact > img {
+  display: none;
+}
+
+.input-layout {
+  border: 1.5px solid var(--color-dark);
+  border-radius: 0.8rem;
+  padding: 0.8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.input-layout input {
+  flex-grow: 1;
+  background-color: transparent;
+  color: var(--color-dark);
+  border: none;
+  outline: none;
+}
+
+.contact-form textarea {
+  border: 1.5px solid var(--color-dark);
+  border-radius: 0.8rem;
+  padding: 0.8rem;
+  background-color: transparent;
+  color: var(--color-dark);
+  resize: none;
+  outline: none;
+}
+
+.btn-submit {
+  align-self: flex-start;
+  cursor: pointer;
+  padding: 0.55rem 1rem;
+  background-color: var(--color-dark);
+  color: #ffffff;
+  border: none;
+  outline: none;
+  border-radius: 0.55rem;
+}
+
 /* footer */
+
 footer {
   height: 4.5rem;
   background-color: var(--color-dark);
